# ChargedHiggsAnalysisV2

./: .gitignore  .gitmodules  README.md  setup.sh  temp
DiLepton/: README.md  doThis.sh  (+1 more)
MeasFakeRateV2/: CMakeLists.txt  README.md  doThis.sh
MeasFakeRateV2/include/: FitMT.h
MeasFakeRateV2/notebooks/: test.ipynb
MeasFakeRateV2/python/: fitMT.py  parseIntegral.py
MeasFakeRateV2/scripts/: build.sh  fitMT.sh  parseIntegral.sh
MeasFakeRateV2/src/: FitMT.cc
SignalRegionStudyV1/: CMakeLists.txt  README.md  doThis.sh  setup.sh
SignalRegionStudyV1/python/: checkTemplates.py  collectLimits.py  makeBinnedTemplates.py  plotLimit.py  plotTemplates.py  preprocess.py  printDatacard.py  updateEraSuffix.py
SignalRegionStudyV1/results/json/: limits.2016postVFP.Combined.Asymptotic.Baseline.AboveZ.json  limits.2016postVFP.Combined.Asymptotic.Baseline.BelowZ.json  limits.2016postVFP.Combined.Asymptotic.Baseline.OnZ.json  limits.2016postVFP.Combined.Asymptotic.Baseline.json  limits.2016postVFP.Combined.Asymptotic.ParticleNet.json  limits.2016postVFP.SR1E2Mu.Asymptotic.Baseline.AboveZ.json  limits.2016postVFP.SR1E2Mu.Asymptotic.Baseline.BelowZ.json  limits.2016postVFP.SR1E2Mu.Asymptotic.Baseline.OnZ.json  limits.2016postVFP.SR1E2Mu.Asymptotic.Baseline.json  limits.2016postVFP.SR1E2Mu.Asymptotic.ParticleNet.json  limits.2016postVFP.SR3Mu.Asymptotic.Baseline.AboveZ.json  limits.2016postVFP.SR3Mu.Asymptotic.Baseline.BelowZ.json  limits.2016postVFP.SR3Mu.Asymptotic.Baseline.OnZ.json  limits.2016postVFP.SR3Mu.Asymptotic.Baseline.json  limits.2016postVFP.SR3Mu.Asymptotic.ParticleNet.json  limits.2016preVFP.Combined.Asymptotic.Baseline.AboveZ.json  limits.2016preVFP.Combined.Asymptotic.Baseline.BelowZ.json  limits.2016preVFP.Combined.Asymptotic.Baseline.OnZ.json  limits.2016preVFP.Combined.Asymptotic.Baseline.json  limits.2016preVFP.Combined.Asymptotic.ParticleNet.json  limits.2016preVFP.SR1E2Mu.Asymptotic.Baseline.AboveZ.json  limits.2016preVFP.SR1E2Mu.Asymptotic.Baseline.BelowZ.json  limits.2016preVFP.SR1E2Mu.Asymptotic.Baseline.OnZ.json  limits.2016preVFP.SR1E2Mu.Asymptotic.Baseline.json  (+51 more)
SignalRegionStudyV1/scripts/: build.sh  collectLimits.sh  plotLimits.sh  plotTemplates.sh  prepareCombine.sh  runCombine.sh
SignalRegionStudyV1/src/: Preprocessor.cc
(+70529 files in other folders)
